MOS-24243: FOOTER AND FLICKERING ISSUE CHANGES
Former-commit-id: bfb6f6fcfdbc616ff3b87818fc8b13b0e2cfa184
Former-commit-id: f50fe029e8d53bf4b18f697db34e44e8b060eb6e

--- a/pre-registration/pre-registration-ui/src/app/feature/file-upload/file-upload/file-upload.component.css
+++ b/pre-registration/pre-registration-ui/src/app/feature/file-upload/file-upload/file-upload.component.css
@@ -176,6 +176,7 @@ mat-select:focus {
   margin-top: 1rem;
   position: fixed;
   bottom: 0;
+  z-index:22;
 }
 
 .user__btn {
